Closed Bug 937858 Opened 11 years ago Closed 11 years ago

GetPaddingRectRelativeToSelf shouldn't name its border-only local var "bp"

Categories

(Core :: Layout, defect, P4)

x86_64
Linux
defect

Tracking

()

RESOLVED FIXED
mozilla28

People

(Reporter: dholbert, Assigned: dholbert)

Details

(Whiteboard: [qa-])

Attachments

(1 file)

It looks like GetPaddingRectRelativeToSelf and GetContentRectRelativeToSelf have a shared history -- in particular, they both have a local variable "nsMargin bp".

However, in GetContentRectRelativeToSelf, the name "bp" makes sense (border/padding):
  nsMargin bp(GetUsedBorderAndPadding());
but in GetPaddingRectRelativeToSelf, it doesn't make sense (it's just border):
  nsMargin bp(GetUsedBorder());

We should rename it from "bp" to "b" or, better, "border".
Priority: -- → P4
Summary: GetPaddingRectRelativeToSelf shouldn't name its "border" local var "bp" → GetPaddingRectRelativeToSelf shouldn't name its border-only local var "bp"
Assignee: nobody → dholbert
Status: NEW → ASSIGNED
Attachment #831085 - Flags: review?(matspal)
Comment on attachment 831085 [details] [diff] [review]
fix: s/bp/border/

r=mats
Attachment #831085 - Flags: review?(matspal) → review+
https://hg.mozilla.org/mozilla-central/rev/232b3e8afcf8
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla28
Whiteboard: [qa-]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: