Bug 937858: Rename border-only variable from "bp" to "border", to avoid confusion with border/padding. r=mats